# APAS-SB

./: .gitignore  APAS-SB_Development_Roadmap.md  CLEANUP_SUMMARY.md  DATA_PIPELINE.md  DDG_IMPLEMENTATION_TEST_SUMMARY.md  DDG_PREDICTION_SUMMARY.md  DEMONSTRATION_RESULTS.md  DENSITY_EXPERIMENT_RESULTS.md  EXECUTIVE_SUMMARY_COSTS.md  EXTREME_SCALE_TRAINING_ANALYSIS.md  FINAL_SUMMARY.md  HYBRID_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  MD_AND_UNIFIED_TRAINING_SUMMARY.md  MD_SIMULATION_INTEGRATION.md  MULTITASK_INTEGRATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE_TABLE.md  QUICK_START_DDG.md  README.md  README_UNCERTAINTY.md  SCALING_SUMMARY_TABLE.md  SUPERCOMPUTER_DEPLOYMENT_GUIDE.md  TRAINING_TIME_ESTIMATES.md  TRAINING_TIME_QUICK_REFERENCE.md  UNCERTAINTY_EXPLANATION.md  UNCERTAINTY_SUMMARY.md  WANDB_INTEGRATION_COMPLETE.md  WANDB_SETUP_GUIDE.md  WORKFLOW_SUMMARY.md  ddg_visualization.py  pyproject.toml  test_data_pipeline.py
docs/: README.md
logs/: training_log.json
mdcath_cuda_loader/: README.md  environment.yaml  mdcath_streaming.py  requirements.txt  test_sampler.py
midnight_dev/: MIDNIGHT_DEV.md  SCOPE_mdcath_first_task.md  ssh_config_snippet  sync_and_run.sh
pearl/: README.md  __init__.py  requirements.txt
scripts/: complete_workflow_example.py  download_cryoem_data.py  download_datasets.py  download_pdb_subset.py  generate_synthetic_data.py  github_test_script.py  inspect_bindingdb_real.py  make_tiny_bindingdb_real.py  oracle_cloud_config.yaml  precompute_bindingdb_embeddings.py  prepare_bindingdb.py  prepare_training_data.py  (+28 more)
(+78 files in other folders)
