[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pearl"
version = "0.1.0"
description = "Pearl: Placing Every Atom in the Right Location — a foundation model for protein-ligand cofolding."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Archit Vasan", email = "avasan@anl.gov" }]
keywords = ["protein", "ligand", "cofolding", "diffusion", "structural-biology", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "einops>=0.7.0",
    "biopython>=1.81",
    "rdkit>=2023.3.1",
    "h5py>=3.8.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
tracking = ["wandb>=0.16.0"]
viz = ["matplotlib>=3.7.0", "seaborn>=0.12.0"]
all = [
    "wandb>=0.16.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Repository = "https://github.com/architvasan/APAS-SB"

[tool.setuptools.packages.find]
include = ["pearl*"]

[tool.setuptools.package-data]
pearl = ["**/*.yaml", "**/*.yml", "**/*.md"]
